# agent-qwen

./: Cargo.toml  build.rs  readme.md
my-node-server/: package-lock.json  package.json
src/: main.rs
src/tools/: fs_access.rs  mod.rs  npm.rs
src/tools/parsers/: mod.rs
src/tools/parsers/js_ts/: mod.rs
src/tools/parsers/python/: mod.rs
src/tools/parsers/rust/: mod.rs
tests/: javascript.js  javascript_functions.txt  package-lock.json  python.py  rust.rs  typescript.ts
