[package]
name = "ai-agent"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.2.16"

[dependencies]
ollama-rs = { version = "0.2.6", features = ["macros", "tool-implementations"] }
tokio = { version = "1", features = ["full", "io-std"] }
fs2 = "0.4.3"
reqwest = "0.12.15"
serde = "1.0.219"
schemars = "0.8.22"
syn = { version = "2", features = ["full"] }
quote = "1.0"
swc_ecma_parser = "10.0.1"
swc_ecma_ast = "8.0.1"
swc_common = "8.0.0"
tree-sitter = "0.25.3"
tree-sitter-python = "0.23.6"
walkdir = "2"
serde_json = "1.0.140"
